[gd_scene load_steps=7 format=3 uid="uid://c0eihojsj0sd8"]

[ext_resource type="Script" path="res://wordy.gd" id="1_yjhex"]
[ext_resource type="Texture2D" uid="uid://i8luo8p23bed" path="res://UI/glassPanel.png" id="2_hjf1n"]
[ext_resource type="Texture2D" uid="uid://cv4od2tfw4mvp" path="res://UI/blankLetterbacking.png" id="3_m3vb4"]
[ext_resource type="Texture2D" uid="uid://pd518itkla8c" path="res://UI/squareRed.png" id="4_bjg4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8ti4"]
size = Vector2(364, 13.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdawc"]
size = Vector2(4.73564, 11.4805)

[node name="Wordy" type="Node2D"]
script = ExtResource("1_yjhex")

[node name="ColorRectGrey" type="ColorRect" parent="."]
process_mode = 4
offset_left = 10.0
offset_top = 14.0
offset_right = 390.0
offset_bottom = 389.0
color = Color(0.20871, 0.20871, 0.20871, 1)

[node name="GlassPanel" type="Sprite2D" parent="."]
texture_filter = 4
position = Vector2(201.5, 201.5)
scale = Vector2(3.97, 3.95)
texture = ExtResource("2_hjf1n")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 100.0
offset_top = 246.0
offset_right = 296.0
offset_bottom = 291.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 96.0
offset_top = 248.0
offset_right = 398.0
offset_bottom = 288.0
bbcode_enabled = true

[node name="BlankLetterbacking" type="Sprite2D" parent="."]
position = Vector2(200, 182)
texture = ExtResource("3_m3vb4")

[node name="Area2Ddragarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Ddragarea"]
position = Vector2(202, 12.25)
shape = SubResource("RectangleShape2D_q8ti4")

[node name="Area2Dclose" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dclose"]
position = Vector2(370, 38.5)
scale = Vector2(3.80097, 2.1776)
shape = SubResource("RectangleShape2D_cdawc")

[node name="SquareRedclose" type="Sprite2D" parent="."]
position = Vector2(370, 39)
texture = ExtResource("4_bjg4d")

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="input_event" from="Area2Ddragarea" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Area2Dclose" to="." method="_on_area_2_dclose_input_event"]
